Using nxml instead of html, no auto-alist in django-html

--- a/README
+++ b/README
@@ -4,3 +4,4 @@
 (require 'django-html-mode)
 (require 'django-mode)
 (yas/load-directory "path-to/django-mode/snippets")
+(add-to-list 'auto-mode-alist '("\\.djhtml$" . django-html-mode))
